--- a/Proj_Cimento/requirements.txt
+++ b/Proj_Cimento/requirements.txt
@@ -1,12 +1,13 @@
-pandas
-numpy
-matplotlib
-seaborn
-scikit-learn
-# TensorFlow pode não ser compatível com algumas versões do Python (ver nota abaixo)
-tensorflow
-joblib
-openpyxl
-nbconvert
-jupyter
-ipykernel
+pandas>=2.0
+numpy>=1.25
+matplotlib>=3.8
+seaborn>=0.12
+scikit-learn>=1.3
+tensorflow>=2.15
+joblib>=1.3
+openpyxl>=3.1
+nbconvert>=7.5
+jupyter>=2.5
+ipykernel>=6.30
+
+
